Refine tag colors to ensure legible contrast ratio

--- a/src/app/styles/_placeholders.scss
+++ b/src/app/styles/_placeholders.scss
@@ -7,6 +7,7 @@
   background-color: $black-05;
   border-radius: 24px;
   display: inline-block;
+  color: $black-54;
 }
 
 
